Separated MD5 and Base64.