@@ -1,5 +1,6 @@
 package com.structurizr.api;
 
+import javax.xml.bind.DatatypeConverter;
 import java.security.MessageDigest;
 import java.util.Base64;
 
@@ -8,8 +9,12 @@ public class Md5Digest {
     private static final String ALGORITHM = "MD5";
 
     public String generate(String content) throws Exception {
+        if (content == null) {
+            content = "";
+        }
+
         MessageDigest digest = MessageDigest.getInstance(ALGORITHM);
-        return Base64.getEncoder().encodeToString(digest.digest(content.getBytes()));
+        return DatatypeConverter.printHexBinary(digest.digest(content.getBytes())).toLowerCase();
     }
 
 }
